...
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

            <!-- Toolbar is the actual app bar with text and the action items -->
            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                android:paddingEnd="@dimen/single_margin"
                android:paddingStart="@dimen/single_margin"
                app:layout_scrollFlags="scroll|enterAlways"
...
            android:id="@+id/ll_rv_show_more"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rv_show_more"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/single_margin"
                android:scrollbars="vertical" />
        </LinearLayout>

...
